objects/Activity_Log__c.object
<CustomObject>
    <fields>
        <fullName>Activity_Outcome__c</fullName>
        <description>Outcome of the activity being recorded</description>
        <label>Activity Outcome</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Failure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Activity_Type__c</fullName>
        <description>Type of activity related to the automated process (i.e. Email Notification, Field Update, New Object Record, etc.)</description>
        <label>Activity Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Send Notification</fullName>
                </value>
                <value>
                    <fullName>Update Existing Record</fullName>
                </value>
                <value>
                    <fullName>Create New Record</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Record_Id__c</fullName>
        <description>Salesforce record Id metadata for the related object</description>
        <label>Record Id</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Fields__c</fullName>
        <description>Primary fields relative to the custom automation process</description>
        <label>Request Fields</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Values__c</fullName>
        <description>Field values relative to the custom automation process</description>
        <label>Request Values</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SObject_Name__c</fullName>
        <description>The Salesforce object related to the record metadata</description>
        <label>SObject Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Process_Name__c</fullName>
        <description>Name of the automation process for the Activity</description>
        <label>Process Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Content__c</fullName>
        <description>The request content during automation</description>
        <label>Request Content</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <description>Logs activity metadata related to custom implemented automation processes</description>
    <label>Activity Log</label>
    <nameField>
        <displayFormat>ACTL-{000000000}</displayFormat>
        <label>Activity Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Activity Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:2</value>
        </filters>
        <label>All</label>
    </listViews>
    <recordTypes>
        <fullName>Custom_Code</fullName>
        <active>true</active>
        <description>Records logged based on Apex Code</description>
        <label>Custom Code</label>
    </recordTypes>
</CustomObject>